<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:orientation="vertical">

        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/ivInfo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="info.json" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/ivImg1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_company"
                    app:tint="@color/tint_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivImg1"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_title"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:textColor="@color/text_color_day_night"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/ivImg2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_email"
                    app:tint="@color/tint_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivImg2"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/text_color_day_night"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/ivImg3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_version"
                    app:tint="@color/tint_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivImg3"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/appVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0.0"
                        android:textColor="@color/text_color_day_night"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright_message"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/made_with_message"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>