<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_day_night"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.fulcrumy.pdfeditor.activities.PremiumActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_day_night"
        android:elevation="0dp"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/premium" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/premiumLottie"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/toolbar_premium"
        app:lottie_autoPlay="true"
        app:lottie_fileName="premium.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/premiumLottie">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/no_ads"
            app:tint="@color/tint_color_day_night" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/text_color_day_night"
            android:text="@string/premium_feature_message"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/monthlySub"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/yearlySub">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="go_premium.json" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/monthly"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/monthly_sub"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/yearlySub"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/banner">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="go_premium.json" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/yearly"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/yearly_sub"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

    <com.fulcrumy.pdfeditor.ads.BannerView
        android:id="@+id/banner"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_color_day_night"
        android:layout_alignParentBottom="true" />

</RelativeLayout>